[package]
name = "cloud-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.15.11"
dialoguer = { version = "0.11.0", features =["fuzzy-select"] }
reqwest = {version = "0.12.15", features = ["json", "rustls-tls", "cookies"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["rt-multi-thread", "macros"]}
