[package]
name = "dd-cloud"
authors = ["Zachary Kornberg <zach@futexlabs.io>"]
version = "0.1.1"
description = "The official CLI tool of Developer DAO Cloud."
repository = "https://github.com/Developer-DAO/cloud-cli"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.15.11"
dialoguer = { version = "0.11.0", features =["fuzzy-select"] }
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.48", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1.8.12", features = ["behavior-version-latest", "credentials-login"] }
aws-sdk-secretsmanager = "1.97.0"
url = "2.5.8"
cookie_store = {version = "0.22.1", features = ["serde_json"]}
bytes = "1.11.1"

[profile.dist]
inherits = "release"
lto = "thin"
